# ProteoCFM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
data/covid/: covid_uniprot_annotations.csv  meta.csv  quant.csv
data/covid/raw/: innsbruck_meta.tsv  innsbruck_quant.tsv  meta.tsv  n_pep.tsv  prot_quant_clin_meas.tsv  prot_quant_clin_meas_meta.tsv
notebooks/covid/: analyze_trajectories.ipynb  generate_trajectories.ipynb  preprocess.ipynb
notebooks/sepsis/: analyze_trajectories.ipynb  baseline.ipynb  generate_trajectories.ipynb  preprocess.ipynb
proteoflow/data/: dataset.py  load.py  sampling.py
proteoflow/models/: __init__.py  fm.py  modules.py  velocity.py
proteoflow/training/: __init__.py  callbacks.py  utils.py
results/: README.md
