[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proteocfm"
version = "0.1.0"
description = "Conditional flow matching for proteomics disease trajectory analysis"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "Erik Hartman"}
]
dependencies = [
    "numpy==2.3.5",
    "pandas==2.3.3",
    "torch==2.9.1",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "statsmodels==0.14.6",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "umap-learn==0.5.9.post2",
    "openpyxl==3.1.5",
    "ipykernel==7.1.0",
    "ipython==9.9.0",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
notebooks = [
    "ipywidgets==8.1.8",
    "jupyter_client==8.8.0",
    "jupyter_core==5.9.1",
]

[tool.setuptools.packages.find]
include = ["proteoflow*"]
